--- a/src/styles/Book.css
+++ b/src/styles/Book.css
@@ -37,7 +37,8 @@
     transform: scale(1.07);
     box-shadow: 0 0 20px red, 0 0 30px black;
 }
-.BookBox button{
+
+.BookBox button {
     margin-bottom: 20px;
     cursor: pointer;
     width: 60px;
@@ -47,7 +48,8 @@
     transition: all 0.5s ease-in-out;
 
 }
-.BookBox button:hover{
+
+.BookBox button:hover {
     background-color: red;
     transform: scale(1.1);
     font-weight: bold;
@@ -76,4 +78,73 @@
     font-size: 0.9rem;
     font-weight: 400;
     color: #ccc;
+}
+
+#searchBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#searchBox input {
+    width: 300px;
+    height: 35px;
+    border-radius: 8px;
+    border: 2px solid goldenrod;
+    padding: 5px 10px;
+    font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: all 0.3s ease;
+}
+
+#searchBox button {
+    margin-left: 10px;
+    width: 80px;
+    height: 45px;
+    border-radius: 8px;
+    border: none;
+    background-color: goldenrod;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: all 0.3s ease;
+}
+
+#searchBox input:hover {
+    outline: none;
+    border-color: orange;
+    box-shadow: 0 0 5px orange;
+}
+
+#searchBox button:hover {
+    background-color: orange;
+    font-weight: bold;
+}
+
+#searchResults {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
+#searchResults h1 {
+    text-align: center;
+    color: goldenrod;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: auto;
+}
+
+#searchResults h2 {
+    font-size: medium;
+    justify-content: center;
+    margin: 20px;
+    justify-self: center;
 }
